# movesense-device-lib

./: CHANGES.md  README.md
MovesenseCoreLib/: MovesenseFromStaticLib.cmake
MovesenseCoreLib/app-build/: modules.cmake  prolog.cmake
MovesenseCoreLib/app-build/compiler/: GCCARM.cmake
MovesenseCoreLib/include/: BleNordicUART.hpp
MovesenseCoreLib/include/common/services/: SystemModeProvider.hpp
MovesenseCoreLib/resources/GCCARM/Release/: wb-resources.wbo
MovesenseCoreLib/resources/VisualC/Debug/: wb-resources.wbo
MovesenseCoreLib/tools/sbemCodeGenerator/: SbemCodeGenFuncs.py  sbemCodeGen.py
samples/custom_bleadv_app/: CustomBLEAdv.cpp
samples/dual_ble_app/: App.cpp  DualBleApp.cpp  DualBleApp.hpp
samples/gatt_sensordata_app/: GATTSensorDataClient.cpp
samples/gatt_sensordata_app/python_client/: decode_sbem.py  movesense_sensor_data.py
samples/libm_movesense_validation/: .gitignore  App.cpp  BleServicesApp.cpp  BleServicesApp.hpp  CMakeLists.txt  README.txt  SKIP_DEBUG  app_root.yaml
samples/offline_gatt_app/: GATTSensorDataClient.cpp  OfflineStorageClient.cpp
samples/simple_ecglogger_app/: README.md
